# HORD

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PROTOTYPE.md  README.md  SIDEWAY-PORT.md  SPEC.md  TODO.md  testing.md
.github/actions/setup-soft-roce/: action.yml
.github/workflows/: ci.yml
hord-async/: Cargo.toml
hord-async/src/: lib.rs  listener.rs
hord-async/tests/: duplex.rs  idle_cpu.rs  listener.rs  loopback.rs  split_consumer.rs  zerocopy.rs
hord-async/tests/common/: mod.rs
hord-core/: Cargo.toml  build.rs
hord-core/csrc/: shim.c  shim.h
hord-core/src/: lib.rs
hord-core/tests/: concurrent_accept.rs  rdma_write_smoke.rs  reject_on_setup_failure.rs
hord-demo/: Cargo.toml
hord-demo/src/: lib.rs
hord-demo/tests/: range_loopback.rs
hord-stream/: Cargo.toml
hord-stream/src/: envelope.rs  handshake.rs  lib.rs  stream.rs
hord-zerocopy/: Cargo.toml
hord-zerocopy/src/: lib.rs  rdma.rs
hord-zerocopy/tests/: source_pool.rs  split_http_smoke.rs  zerocopy_loopback.rs
