[workspace]
resolver = "2"
members = ["hord-core", "hord-stream", "hord-zerocopy", "hord-async", "hord-demo"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Per Buer, Varnish Software"]
repository = "https://github.com/varnish/HORD"

# A first prototype of HORD (HTTP Over RDMA). See README.md for the spec.
#
# This workspace implements the HORD *stream* path — RC queue pairs, two-sided
# send/recv, the message envelope, credit-based flow control — plus the
# zero-copy / RDMA-write extension (spec section 7.1–7.4): one-sided RDMA writes
# straight into a client-registered buffer, in hord-zerocopy. (Protocol
# splitting / write-with-immediate, §7.7, is not yet implemented.)
#
# The core stack takes no third-party crate dependencies: hord-core talks to
# libibverbs/librdmacm through a small C shim compiled by its build script, and
# hord-stream and hord-zerocopy above it are plain std Rust. This keeps the
# transport buildable on an air-gapped RDMA host with nothing but a C compiler
# and rdma-core -dev.
#
# The async milestone (hord-async) is the sole exception: it depends on tokio
# (and the demo on hyper) to present AsyncRead/AsyncWrite + serve HTTP. Those
# deps are confined to that crate, so hord-core/hord-stream stay dep-free.

[profile.release]
opt-level = 3
