[workspace]
resolver = "2"
members = ["hord-core", "hord-stream", "hord-zerocopy", "hord-async", "hord-demo"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Per Buer, Varnish Software"]
repository = "https://github.com/varnish/HORD"

# A first prototype of HORD (HTTP Over RDMA). See README.md for the spec.
#
# This workspace implements the HORD *stream* path — RC queue pairs, two-sided
# send/recv, the message envelope, credit-based flow control — plus the
# zero-copy / RDMA-write extension (spec section 7.1–7.4): one-sided RDMA writes
# straight into a client-registered buffer, in hord-zerocopy. (Protocol
# splitting / write-with-immediate, §7.7, is not yet implemented.)
#
# hord-core wraps libibverbs/librdmacm through the `sideway` crate (a safe
# rdma-core wrapper), plus `rdma-mummy-sys` for the few CQ-event-channel calls
# sideway does not yet expose. hord-stream and hord-zerocopy above it are plain
# std Rust. (Earlier revisions used a hand-written C shim and took no third-party
# crate dependencies, building on an air-gapped host with just a C compiler and
# rdma-core-dev; the sideway port traded that dep-free property for far less
# unsafe code and no C — see git history. As part of the port the HORD handshake
# moved out of RDMA-CM private data into a first message over the QP, so the
# transport no longer touches the handshake at all.)
#
# The async milestone (hord-async) adds tokio (and the demo adds hyper) to
# present AsyncRead/AsyncWrite + serve HTTP.

[profile.release]
opt-level = 3
