[package]
name = "hord-async"
description = "Async (tokio) AsyncRead/AsyncWrite wrapper over a HORD stream"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# This is the one crate in the workspace that takes third-party dependencies:
# the async milestone targets tokio + hyper, and isolating them here keeps
# hord-core and hord-stream dependency-free (and buildable on an air-gapped RDMA
# host with only a C compiler and rdma-core).
[dependencies]
hord-stream = { path = "../hord-stream" }
# "rt": `spawn_local`/`spawn_blocking`/`LocalSet` + the current-thread runtimes
#   the multi-waiter split (`AsyncHordStream::into_split`) and `HordListener`'s
#   thread-per-core workers run on.
# "sync": `watch` (graceful-shutdown signal) + `mpsc` (acceptor → worker handoff)
#   for `HordListener`.
# "macros": `tokio::select!` in the listener's accept loop (shutdown vs. accept).
tokio = { version = "1", features = ["net", "io-util", "time", "rt", "sync", "macros"] }
# Lightweight logging facade for the server loop (handshake/accept/drain
# diagnostics). Near-zero cost with no logger installed; integrates with the
# host's `log` setup (e.g. Carapace) when there is one.
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["net", "io-util", "time", "rt", "macros", "sync"] }
# Test-only: per-thread CPU accounting (CLOCK_THREAD_CPUTIME_ID) for the #15
# busy-poll-vs-park measurement in tests/idle_cpu.rs.
libc = "0.2"
# Test-only: reuse the X-HORD-RDMA-Write codec in the zero-copy write test.
hord-zerocopy = { path = "../hord-zerocopy" }
